Sends WindowStateType property earlier on snapped tablet-mode

When the window is snapped to left or right at the end of
tab-dragging in tablet-mode, the snapped state is needed by
TabDragController before the actual process of snap window
happens.

Because of this, SplitViewController sends the window state
type first, and then wait for the end of tab-dragging to
process the snapping of window.

BUG=880635
TEST=the new expectation covers

Change-Id: I7e37f2a32c4bcf66fb3106c5ab8fcce6be98a5fd
Reviewed-on: https://chromium-review.googlesource.com/1214175
Reviewed-by: Tom Sepez <tsepez@chromium.org>
Reviewed-by: Xiaoqian Dai <xdai@chromium.org>
Reviewed-by: Scott Violet <sky@chromium.org>
Commit-Queue: Jun Mukai <mukai@chromium.org>
Cr-Commit-Position: refs/heads/master@{#591079}
Former-commit-id: c913f997537e0aa18efda5ce22044f97574fe98a